# JetsonLidar

./: .gitignore  AEROSYNC_REQUIREMENTS.md  AEROSYNC_SPEC.md  CLAUDE.md  CMakeLists.txt  JETSON_SPEC.md  README.md  aeva_simple_bridge.cpp  capture_flight.sh  fusion.py  fusion_ros.py  requirements.txt  start_fusion.sh  test_api_integration.py  test_mission_planner.py  test_photo_upload.py  test_websocket.py
config/: settings.yaml
perception_nav/: __init__.py
perception_nav/src/: __init__.py  aerosync_client.py  capture_system.py  corridor_follower.py  fusion.py  gps_reader.py  guidance.py  line_follower.py  mission_executor.py  mission_manager.py  mission_planner.py  pole_detector.py  pole_inspector.py  smooth_controller.py
pole_nav_minimal/config/: settings.yaml
pole_nav_minimal/scripts/: setup.sh
scripts/: run.sh
tests/: fake_aerosync_server.py  test_mission_simulation.py
